# mediexplain

./: .gitignore  CLAUDE.md  LEARNING.md  README.md  compose.yaml
data/webscraping/: .gitignore  pyproject.toml  scraper.py
k8s/: configmap.yaml  kind-config.yaml  namespace.yaml  nvidia-device-plugin.yaml  secret.yaml
k8s/api/: deployment.yaml  service.yaml
k8s/grafana/: configmap.yaml  deployment.yaml  pvc.yaml  service.yaml
k8s/inference/: deployment.yaml  pvc.yaml  service.yaml
k8s/ingest/: job.yaml
k8s/minio/: pvc.yaml  service.yaml  statefulset.yaml
k8s/postgres/: pvc.yaml  service.yaml  statefulset.yaml
k8s/prometheus/: configmap.yaml  deployment.yaml  pvc.yaml  service.yaml
k8s/ui/: deployment.yaml  service.yaml
monitoring/: prometheus.yml
monitoring/grafana/dashboards/: dashboards.yml
monitoring/grafana/datasources/: prometheus.yml
services/api/: Containerfile  agent.py  chat.py  main.py  pyproject.toml  tools.py
services/inference/: Containerfile  entrypoint.sh
services/ingest/: Containerfile  main.py  pyproject.toml
services/ui/: Containerfile  main.py  pyproject.toml
