[project]
name = "mediexplain-api"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "pdfplumber>=0.11",
    "psycopg2-binary>=2.9",
    "pgvector>=0.3",
    "openai>=1.0",
    "sentence-transformers>=3.0",
    "structlog>=24.0",
    "python-multipart>=0.0.9",
]

[tool.ruff.lint]
select = ["E", "F", "I"]
